update task state active status
