# handler/task_state_handler.go
@@ -2,8 +2,10 @@ package handler
 
 import (
 	"context"
+	"net/http"
 
 	"github.com/curefatih/message-sender/db"
+	"github.com/curefatih/message-sender/model/dto"
 	"github.com/gin-gonic/gin"
 	"github.com/spf13/viper"
 )
@@ -31,8 +33,30 @@ func NewTaskStateHandler(ctx context.Context, cfg *viper.Viper, repository db.Ta
 // @Tags Task State
 // @Accept json
 // @Produce json
-// @Success 200 {string} todo
+// @Param   TaskStateUpdateRequest body dto.TaskStateUpdateRequest true "Add TaskStateUpdateRequest"
+// @Success 200 {map} {"message": string, "active": bool}
 // @Router /api/v1/tasks [put]
-func (mth *TaskStateHandler) UpdateTaskState(ctx *gin.Context) {
-	panic("todo")
+func (tsh *TaskStateHandler) UpdateTaskState(ctx *gin.Context) {
+	var taskStateUpdateRequest dto.TaskStateUpdateRequest
+
+	err := ctx.ShouldBind(&taskStateUpdateRequest)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	err = tsh.repository.UpdateTaskActiveStatus(ctx.Request.Context(), taskStateUpdateRequest.Active)
+
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{
+			"error": "error while creating new message task",
+		})
+	}
+
+	ctx.JSON(http.StatusCreated, gin.H{
+		"message": "successfully updated task state active status",
+		"active":  taskStateUpdateRequest.Active,
+	})
 }
